# DiceGame

./: CMakeLists.txt  main.cpp  run.sh
.github/workflows/: main.yml
